Implimented Firebase Auth

--- a/FirebaseDemo/App.config
+++ b/FirebaseDemo/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="FirebaseDemo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="FirebaseDemo.FirebaseDemoSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="FirebaseDemo.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -33,6 +40,27 @@
         <assemblyIdentity name="Google.Api.CommonProtos" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.7.0.0" newVersion="1.7.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <FirebaseDemo.Properties.Settings>
+      <setting name="AuthToken" serializeAs="String">
+        <value />
+      </setting>
+    </FirebaseDemo.Properties.Settings>
+    <FirebaseDemo.FirebaseDemoSettings>
+      <setting name="AutoToken" serializeAs="String">
+        <value />
+      </setting>
+    </FirebaseDemo.FirebaseDemoSettings>
+    <FirebaseDemo.Settings>
+      <setting name="AuthToken" serializeAs="String">
+        <value>okok</value>
+      </setting>
+    </FirebaseDemo.Settings>
+  </userSettings>
 </configuration>
