--- a/FirebaseDemo/App.config
+++ b/FirebaseDemo/App.config
@@ -51,6 +51,9 @@
       <setting name="AuthToken" serializeAs="String">
         <value />
       </setting>
+      <setting name="FirebaseAuthJson" serializeAs="String">
+        <value />
+      </setting>
     </FirebaseDemo.Properties.Settings>
     <FirebaseDemo.FirebaseDemoSettings>
       <setting name="AutoToken" serializeAs="String">
