--- a/FirebaseDemo/Properties/Settings.settings
+++ b/FirebaseDemo/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="AuthToken" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FirebaseAuthJson" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
